--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,8 +8,12 @@
     <script type="text/javascript" src="~/Scripts/jquery.validate-vsdoc.js" ></script>
     <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.js" ></script>
     <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.min.js" ></script>
-    
+    <link href="~/Scripts/bootstrap.css" rel="stylesheet" />
     <link href="~/bootstrap.css" rel="stylesheet"/>
+    <a href="~/Scripts/bootstrap.css.map">~/Scripts/bootstrap.css.map</a>
+    <link href="~/Scripts/jquery.fancybox.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.fancybox.js"></script>
+    <script src="~/Scripts/jquery.fancybox.pack.js"></script>
     <script src="~/bootstrap.js"></script>
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
